5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1800_2565.log
== TEST (2019-06-06 15:27:10) 
-- CODE:
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)
a = (u/w) * 100
for i in range(size(v)):
	if(v >= 5):
		cont[0] = cont[0] + 1
	elif(v < 5):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:27:30) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)
a = (u/w) * 100
for i in range(size(v)):
	if(v >= 5):
		cont[0] = cont[0] + 1
	elif(v < 5):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:28:34) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)
a = (u[i]/w) * 100
for i in range(size(v)):
	if(v[i] >= 5):
		cont[0] = cont[0] + 1
	elif(v[i] < 5):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:29:30) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	if(v[i] >= 5):
		cont[0] = cont[0] + 1
	elif(v[i] < 5):
		cont[1] = cont[1] + 1
	a = (u[i]/w) * 100
	elif(a < 75):
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
File "XXXX", line 14
    elif(a < 75):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:29:59) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	if(v[i] >= 5):
		cont[0] = cont[0] + 1
	elif(v[i] < 5):
		cont[1] = cont[1] + 1
	elif(a < 75):
		a = (u[i]/w) * 100
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:31:30) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	if(v[i] >= 5):
		cont[0] = cont[0] + 1
	else:
		cont[1] = cont[1] + 1
		a = (u[i]/w) * 100
	if(a < 75):
		a = (u[i]/w) * 100
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:31:59) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	if(v[i] >= 5):
		cont[0] = cont[0] + 1
	else:
		cont[1] = cont[1] + 1
	a = (u[i]/w) * 100
	if(a < 75):
		a = (u[i]/w) * 100
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:34:01) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:36:19) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] > 5 and a < 75):
		cont[2] = cont[2] + 1
	
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:39:36) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5):
		cont[0] = cont[0] + 1
	elif(v[i] < 5):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:40:59) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:44:01) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:44:17) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- EXECUTION TIME:
1.17886
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[6 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[8 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:44:28) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- EXECUTION TIME:
1.15565
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[6 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[8 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:45:38) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- EXECUTION TIME:
0.944846
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[6 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[8 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:45:39) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:45:55) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- EXECUTION TIME:
1.21393
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[4 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[6 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[8 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:45:56) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:46:09) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:47:00) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[0] = cont[0] + 1
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:48:19) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a > 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a > 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 15:49:32) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:49:46) 
-- CODE:
from numpy import *
v = array(eval(input("insira as notas:")))
u = array(eval(input("insira a frequencia:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(v[i] >= 5 and a < 75):
		cont[2] = cont[2] + 1
	elif(v[i] < 5 and a < 75):
		cont[1] = cont[1] + 1
		cont[2] = cont[2] + 1
print(cont)
			 
-- EXECUTION TIME:
0.860844
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:56:15) 
-- CODE:
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u/w) * 100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:56:39) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u/w) * 100
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:57:32) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w[i]) * 100
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:58:28) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:59:16) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a[i] = (u[i]/w) * 100
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:02:43) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) * 100
	if(v >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:03:35) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)
a = u[i]/w * 100
for i in range(size(v)):

	if(v >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:04:05) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u[i]/w * 100
	if(v >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:04:33) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u/w * 100
	if(v >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:04:41) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u/w * 100
	if(v >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:06:42) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)
b = u/w
for i in range(size(v)):
	a = b * 100
	if(v >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:07:53) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a[i] = u[i]/w * 100
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:09:38) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u[i]/w
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:10:58) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = input("insira a carga horaria:")

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u/w
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:47) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u/w
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:12:14) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u[i]/w
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:13:27) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = u[i]/w
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:14:20) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) *100
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:14:40) 
-- CODE:
from numpy import *
v = array(eval(input("insira as medias finais de cada aluno:")))
u = array(eval(input("insira as horas frequentadas:")))
w = int(input("insira a carga horaria:"))

cont = zeros(3,dtype = int)

for i in range(size(v)):
	a = (u[i]/w) *100
	if(v[i] >= 5 and a >= 75):
		cont[0] = cont[0] + 1
	elif(v[i] < 5 and a >= 75):
		cont[1] = cont[1] + 1
	elif(a < 75):
		cont[2] = cont[2] + 1

print(cont)
	

-- EXECUTION TIME:
1.07704
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
